--- a/server/package.json
+++ b/server/package.json
@@ -4,15 +4,20 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon server.js"
   },
   "author": "Marcin Michalik",
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.9.24",
     "morgan": "^1.10.0"
+  },
+  "devDependencies": {
+    "eslint": "^7.4.0",
+    "eslint-config-salt": "^1.0.1"
   }
 }
