--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-rate-limit": "^5.1.3",
-    "mongoose": "^5.9.24",
+    "mongoose": "^5.9.24"
   },
   "devDependencies": {
     "eslint": "^7.4.0",
