--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm i --prefix client  && npm i --prefix server && npm start --prefix server"
+    "start": "node server/server.js"
   },
   "repository": {
     "type": "git",
@@ -16,5 +16,13 @@
   "bugs": {
     "url": "https://github.com/terragady/short-message-board/issues"
   },
-  "homepage": "https://github.com/terragady/short-message-board#readme"
+  "homepage": "https://github.com/terragady/short-message-board#readme",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-rate-limit": "^5.1.3",
+    "mongoose": "^5.9.24"
+  },
 }
