--- a/package.json
+++ b/package.json
@@ -4,19 +4,19 @@
   "description": "",
   "main": "server/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server/server.js"
+    "start": "node server/server.js",
+    "lint": "eslint ."
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/terragady/short-message-board.git"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Marcin Michalik",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/terragady/short-message-board/issues"
   },
-  "homepage": "https://github.com/terragady/short-message-board#readme",
+  "homepage": "https://messaging-app-hackday.herokuapp.com/",
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
@@ -24,5 +24,9 @@
     "express": "^4.17.1",
     "express-rate-limit": "^5.1.3",
     "mongoose": "^5.9.24"
+  },
+  "devDependencies": {
+    "eslint": "^7.4.0",
+    "eslint-config-salt": "^1.0.1"
   }
 }
