--- a/package.json
+++ b/package.json
@@ -19,15 +19,13 @@
   },
   "homepage": "https://messaging-app-hackday.herokuapp.com/",
   "dependencies": {
-    "body-parser": "^1.19.0",
+    "body-parser": "^1.20.0",
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "express-rate-limit": "^5.1.3",
-    "mongoose": "^5.9.24"
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "express-rate-limit": "^6.4.0",
+    "mongoose": "^6.3.5"
   },
   "devDependencies": {
-    "eslint": "^7.4.0",
-    "eslint-config-salt": "^1.0.1"
-  }
+    "eslint": "^8.16.0"  }
 }
